--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Laurel Template</title>
+	
+	
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Playfair+Display:700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
@@ -47,8 +49,8 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Landing template for startups</h1>
-	                        <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
+	                        <h1 class="hero-title mt-0">Crypto Planet</h1>
+	                        <p class="hero-paragraph">Make money with your concentration. Collect planets and fusion them to get the rarest ones.</p>
 	                        <div class="hero-cta"><a class="button button-shadow" href="#">Learn more</a><a class="button button-primary button-shadow" href="#">Early access</a></div>
 						</div>
 						<div class="hero-app">
@@ -101,7 +103,7 @@
 								    </g>
 								</svg>
 							</div>
-							<img class="device-mockup" src="dist/images/iphone-mockup.png" alt="App preview">
+							<img class="device-mockup" src="dist/images/planetevisage.jpeg" alt="App preview">
                             <div class="hero-app-dots hero-app-dots-1">
 								<svg width="124" height="75" xmlns="http://www.w3.org/2000/svg">
 								    <g fill="none" fill-rule="evenodd">
@@ -132,7 +134,7 @@
             <section class="features section">
                 <div class="container">
 					<div class="features-inner section-inner has-bottom-divider">
-						<h2 class="section-title mt-0">Bold features</h2>
+						<h2 class="section-title mt-0">Features</h2>
                         <div class="features-wrap">
                             <div class="feature is-revealing">
                                 <div class="feature-inner">
@@ -155,8 +157,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Discover</h3>
-                                    <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design.</p>
+                                    <h3 class="feature-title mt-24">Buy & Sell</h3>
+                                    <p class="text-sm mb-0">Buy & sell planets with our community.</p>
                                 </div>
                             </div>
 							<div class="feature is-revealing">
@@ -180,8 +182,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Discover</h3>
-                                    <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design.</p>
+                                    <h3 class="feature-title mt-24">Create Galaxies</h3>
+                                    <p class="text-sm mb-0">Collect as many planets as possible to build amazing galaxies. Galaxies can be sold at higher prices.</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -210,8 +212,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Discover</h3>
-                                    <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design.</p>
+                                    <h3 class="feature-title mt-24">Fusion planets</h3>
+                                    <p class="text-sm mb-0">Fusion two planets together in order to create new planets. You might destroy a part of your planets. You will get new, rarest one as well.</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -235,8 +237,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Discover</h3>
-                                    <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design.</p>
+                                    <h3 class="feature-title mt-24">Collect rare planets</h3>
+                                    <p class="text-sm mb-0">Collect rare and valuable planets and sell them through the blockchain.</p>
                                 </div>
                             </div>
 							<div class="feature is-revealing">
@@ -261,8 +263,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Discover</h3>
-                                    <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design.</p>
+                                    <h3 class="feature-title mt-24">Concentrate more</h3>
+                                    <p class="text-sm mb-0">The more you concentrate, the more bonus you will get to fusion planets.</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -286,8 +288,8 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Discover</h3>
-                                    <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design.</p>
+                                    <h3 class="feature-title mt-24">Watch animations</h3>
+                                    <p class="text-sm mb-0">Watch our sleek animations while working for creativity spikes.</p>
                                 </div>
                             </div>
                         </div>
@@ -299,8 +301,8 @@
                 <div class="container-sm">
                     <div class="media-inner section-inner">
                         <div class="media-header text-center">
-                            <h2 class="section-title mt-0">Meet Laurel</h2>
-                            <p class="section-paragraph mb-0">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+                            <h2 class="section-title mt-0">Learn how to play Crypto Planet</h2>
+                            <p class="section-paragraph mb-0">Join our Crypto Planets community and learn how to get started with fusionning CryptoPlanets. Watch the video below for a quick demo.</p>
                         </div>
 						<div class="media-canvas">
 							<svg width="800" height="450" viewBox="0 0 800 450" xmlns="http://www.w3.org/2000/svg">
@@ -342,7 +344,7 @@
                     <div class="newsletter-inner section-inner">
                         <div class="newsletter-header text-center">
                             <h2 class="section-title mt-0">Stay in the know</h2>
-                            <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+                            <p class="section-paragraph">If you are interested, please join our beta tester waiting list. More than 10K people have already registered to get early access to valuable planets.</p>
                         </div>
                         <div class="footer-form newsletter-form field field-grouped">
                             <div class="control control-expanded">
@@ -422,7 +424,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">&copy; 2018 Laurel, all rights reserved</div>
+                    <div class="footer-copyright">&copy; 2020 Crypto Planet, all rights reserved</div>
                 </div>
             </div>
         </footer>
