--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 										</svg>
                                     </div>
                                     <h3 class="feature-title mt-24">Buy & Sell</h3>
-                                    <p class="text-sm mb-0">Buy & sell planets with our community.</p>
+                                    <p class="text-sm mb-0">Buy & sell planets with our community. Collect the most beautiful ones.</p>
                                 </div>
                             </div>
 							<div class="feature is-revealing">
@@ -135,7 +135,7 @@
 										</svg>
                                     </div>
                                     <h3 class="feature-title mt-24">Create Galaxies</h3>
-                                    <p class="text-sm mb-0">Collect as many planets as possible to build amazing galaxies. Galaxies can be sold at higher prices.</p>
+                                    <p class="text-sm mb-0">Collect as many planets as possible to build amazing galaxies.</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -165,7 +165,7 @@
 										</svg>
                                     </div>
                                     <h3 class="feature-title mt-24">Fusion planets</h3>
-                                    <p class="text-sm mb-0">Fusion two planets together in order to create new planets. You might destroy a part of your planets. You will get new, rarest one as well.</p>
+                                    <p class="text-sm mb-0">Fusion two planets together in order to create new planets. You will get new, rarest one as well.</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
