--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     </div>
                     <ul class="footer-links list-reset">
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="https://robinblockchain.github.io/planetsdashboard.html">Contact</a>
                         </li>
                         <li>
                             <a href="#">About us</a>
