--- a/planetsdashboard.html
+++ b/planetsdashboard.html
@@ -30,10 +30,28 @@
 
 <button type="button" onclick="TransferPlanet()">Transfer</button>
 
-
+<div id="apitest"></div>
 
 
  <script>
+   
+var url = "https://cryptoplanet.pythonanywhere.com/planets/2";
+
+var xhr = new XMLHttpRequest();
+xhr.open("GET", url);
+
+xhr.setRequestHeader("Accept", "application/json");
+
+xhr.onreadystatechange = function () {
+  //console.log(xhr.readyState);
+   if (xhr.readyState === 4) {
+      console.log(xhr.status);
+      console.log(xhr.responseText);
+      $("#apitest").text(xhr.responseText);
+   }};
+
+xhr.send();
+
    
     </script>
 
