--- a/planetsdashboard.html
+++ b/planetsdashboard.html
@@ -40,7 +40,7 @@ var url = "https://cryptoplanet.pythonanywhere.com/planets/2";
 var xhr = new XMLHttpRequest();
 xhr.open("GET", url);
 
-xhr.setRequestHeader("Accept", "application/json");
+//xhr.setRequestHeader("Accept", "application/json");
 
 xhr.onreadystatechange = function () {
   //console.log(xhr.readyState);
