--- a/planetsdashboard.html
+++ b/planetsdashboard.html
@@ -156,3 +156,149 @@
     <script src="dist/js/main.min.js"></script>
 </body>
 </html>
+	
+<style>
+	
+
+/* BEGIN CARD DESIGN */
+.hero {
+  display: inline-block;
+  position: relative;
+  width: 400px;
+  min-width: 400px;
+  height: 400px;
+  border-radius: 30px;
+  overflow:hidden;
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+  margin: 30px;
+}
+
+.hero-profile-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height:auto;
+}
+
+.hero-description-bk {
+  background-image: linear-gradient(0deg , #626868, #191919);
+  border-radius: 0px;
+  position: absolute;
+  top: 55%;
+  left: 0px;
+  height: 65%;
+  width: 108%;
+}
+
+
+.hero-logo {
+  height: 40px;
+  width: 40px;
+  border-radius: 10px;
+  background-color: #fff;
+  position: absolute;
+  bottom: 25%;
+  left: 30px;
+  overflow:hidden;
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.7);
+}
+
+.hero-logo img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  height:auto;
+}
+
+.hero-description-1 {
+  position: absolute;
+  color: #fff;
+  font-weight: bold;
+  left: 100px;
+  bottom: 32%;
+}
+
+
+.hero-description-2 {
+  position: absolute;
+  color: #fff;
+  font-weight: 10;
+  left: 100px;
+  bottom: 26%;
+}
+
+.hero-description-3 {
+  position: absolute;
+  color: #fff;
+  font-weight: 10;
+  left: 100px;
+  bottom: 20%;
+}
+
+.hero-btn-1 {
+  position: absolute;
+  background-color:#080520;
+  color: #fff;
+  left: 30px;
+  bottom: 5%;
+  padding: 10px 20px;
+  border: 1px solid #fff;
+  border-radius: 10px;
+}
+
+.hero-btn {
+  position: absolute;
+  color: #fff;
+  right: 30px;
+  bottom: 5%;
+  padding: 10px 20px;
+  border: 1px solid #fff;
+  border-radius: 10px;
+}
+
+.hero-btn a {
+  color: #fff;
+}
+
+.hero-btn-1 a {
+  color: #fff;
+}
+
+.hero-btn-1:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: white;
+}
+
+.hero-btn:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: white;
+}
+
+.hero-date {
+  position: absolute;
+  color: #fff;
+  left: 30px;
+  bottom: 10%;
+}
+/* END CARD DESIGN */
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  background-color: #eee;
+  min-height: 100vh;
+}
+.btn i:before {
+  width: 14px;
+  height: 14px;
+  position: fixed;
+  color: #fff;
+  background: #0077B5;
+  padding: 10px;
+  border-radius: 50%;
+  top:5px;
+  right:5px;
+	}
+	</style>
