--- a/planetsdashboard.html
+++ b/planetsdashboard.html
@@ -21,15 +21,15 @@
   </head>
 <header>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <section class="top-nav">
+  <section class="top-nav boxed-container">
     <div>
       Logo Here
     </div>
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
-    <div class='menu-button'></div>
+    <div class='menu-button' onclick="myMenu()"></div>
   </label>
-    <ul class="menu">
+    <ul class="menu" id="mobile-menu">
       <li><a href="#">One</a></li>
       <li>Two</li>
       <li>Three</li>
@@ -37,7 +37,19 @@
       <li>Five</li>
     </ul>
   </section>
+<script>
+	function myMenu(){
+	var x = document.getElementById("mobile-menu").style.zIndex;
+	if (x < 0 ) {
+		x = x + 20;
+	}
+	else {
+		x = x - 20;
+	}
 
+	}
+	</script>
+	
 	</header> 
 	
 
@@ -414,6 +426,8 @@ body {
     width: 100%;
     justify-content: center;
     align-items: center;
+    z-index: -10;
+	  
   }
   #menu-toggle ~ .menu li {
     height: 0;
