--- a/planetsdashboard.html
+++ b/planetsdashboard.html
@@ -40,6 +40,8 @@
 <script>
 	function myMenu(){
 	var x = document.getElementById("mobile-menu").style.zIndex;
+	console.log(x);
+	console.log('test');
 	if (x < 0 ) {
 		x = x + 20;
 	}
