--- a/planetsdashboard.html
+++ b/planetsdashboard.html
@@ -27,7 +27,7 @@
     </div>
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
-    <div class='menu-button' onclick="myMenu()"></div>
+    <div class='menu-button'></div>
   </label>
     <ul class="menu">
       <li><a href="#">One</a></li>
