--- a/details.html
+++ b/details.html
@@ -121,23 +121,23 @@
                 <p>Unique Traits</p>
                 </div>
                 <div class="traits">
-                <img src="https://i.pinimg.com/originals/58/14/8d/58148d6ab1004f33e04e5d88135d1558.jpg" style=
+                <img src="/src/images/thumbnail_logotestback.png" style=
     "width: 100%;" alt="" >
                 <p> Milky Way </p>
                 </div>
                 <div class="traits" style="margin-left:28.33%">
-                <img src="https://i.pinimg.com/originals/58/14/8d/58148d6ab1004f33e04e5d88135d1558.jpg" style=
+                <img src="/src/images/thumbnail_logostarsfeat.png" style=
     "width: 100%;" alt="" >
                 <p> Glass </p>
                 </div>
 
                 <div class="traits" style="margin-left:51.66%">
-                <img src="https://i.pinimg.com/originals/58/14/8d/58148d6ab1004f33e04e5d88135d1558.jpg" style=
+                <img src="/src/images/thumbnail_logooption.png" style=
     "width: 100%;" alt="" >
                 <p> Lightnings </p>
                 </div>
                 <div class="traits" style="margin-left:74.99%">
-                <img src="https://i.pinimg.com/originals/58/14/8d/58148d6ab1004f33e04e5d88135d1558.jpg" style=
+                <img src="/src/images/thumbnail_logoanneau.png" style=
     "width: 100%;" alt="" >
                 <p> Fire </p>
                 </div>
@@ -341,6 +341,7 @@
   position: absolute;
   color: #fff;
   font-weight: normal;
+  text-align: initial;
   font-size:16px;
   margin-left:5%;
   top: 45%;
@@ -443,8 +444,7 @@ border-radius: 10px;
 .buy-sell-value{
 position: absolute;
 margin-left:30px;
-bottom: 10%;
-top: 10%;
+bottom: 0%;
 font-style: normal;
 font-size: 20px;
 color: #000000;
@@ -485,9 +485,7 @@ color: #000000;
     bottom: 80%;
   }
   .buy-sell-value{
-    font-size:13px;
-    bottom: 25%;
-    top: auto;
+    font-size:16px;
   }
   .buy-sell{
     width:90%;
@@ -511,6 +509,14 @@ color: #000000;
   }
 
 }
+
+@media (max-width: 641px){
+.buy-sell-button{
+    font-size:14px;
+    margin-left: 20%;
+  }
+	
+}	
 @media (max-width: 650px) and (min-width:550px){
   .nonhero{
     height: 1350px;
