--- a/details.html
+++ b/details.html
@@ -279,7 +279,7 @@
   display: inline-block;
   position: relative;
   width: 90%;
-  min-width: 400px;
+  min-width: 300px;
   height: 1500px;
   border-radius: 30px;
   overflow:hidden;
@@ -515,6 +515,10 @@ color: #000000;
     font-size:14px;
     margin-left: 20%;
   }
+.nonhero{
+    width: 100%;
+    margin-left:0%;
+  }
 	
 }	
 @media (max-width: 650px) and (min-width:550px){
@@ -567,52 +571,24 @@ color: #000000;
 
 }
 
-.hero-description-3 {
-  position: inherit;
-  color: #fff;
-  font-weight: 10;
-  left: 100px;
-  bottom: 55%;
+@media (max-width: 400px){
+.hero-description-1 {
+    margin-left: 25%;
 }
+.buy-sell-value {
+    font-size: 12px;
+}
+.buy-sell-button {
+    font-size: 12px;
+    margin-left: 18%;
+    width:30%;
+}
+.hero-description-2{
+font-size:12px;
+}
+}
+	
 
-.hero-btn-1 {
-  position: inherit;
-  background-color:#080520;
-  color: #fff;
-  left: 30px;
-  bottom: 20%;
-  padding: 10px 20px;
-  border: 1px solid #fff;
-  border-radius: 10px;
-}
-
-.hero-btn {
-  position: inherit;
-  color: #fff;
-  right: 30px;
-  bottom: 20%;
-  padding: 10px 20px;
-  border: 1px solid #fff;
-  border-radius: 10px;
-}
-
-.hero-btn a {
-  color: #fff;
-}
-
-.hero-btn-1 a {
-  color: #fff;
-}
-
-.hero-btn-1:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  color: white;
-}
-
-.hero-btn:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  color: white;
-}
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
