--- a/focus.html
+++ b/focus.html
@@ -91,8 +91,8 @@
               
 
                 <div class="pomodoro-conteiner">
-    <h1 class="title">Boost Your Planet</h1>
-    <p class="subtitle">The Pomodoro Technique uses a timer to break down work into intervals, traditionally 25 minutes in length, separated by short breaks.</p>
+    <h2 class="title">Boost Your Planet</h2>
+    <p class="subtitle">The Pomodoro Technique uses a timer to break down work into intervals, separated by short breaks.</p>
     <div class="preferences">
       <div class="break">
         <h4 id="break-label" class="break-title">Break</h4>
@@ -396,6 +396,7 @@ body {
   text-align: center;
   font-size: 1.2rem;
   flex-wrap: nowrap;
+  margin-bottom: 1rem;
   justify-content: space-around;
 }
 
@@ -559,7 +560,8 @@ body {
 
 .timer {
   font-weight: 800;
-  font-size: 5rem;
+  font-size: 4rem;
+  font-family: none;
 }
 
 .buttons {
@@ -587,6 +589,7 @@ body {
   text-shadow: 0 -1px -1px #080520;
   font-weight: 800;
   font-size: 1rem;
+  font-family: none;
   transition: all 0.15s ease-in-out;
 }
 
@@ -613,6 +616,7 @@ body {
   text-shadow: 0 -1px -1px #080520;
   font-weight: 800;
   font-size: 1rem;
+  font-family: none;
   transition: all 0.15s ease-in-out;
 }
 
@@ -640,6 +644,7 @@ body {
   text-shadow: 0 -1px -1px #080520;
   font-weight: 800;
   font-size: 1rem;
+  font-family: none;
   transition: all 0.15s ease-in-out;
 }
 
