--- a/planetsdashboard.html
+++ b/planetsdashboard.html
@@ -187,13 +187,12 @@
 .nonhero {
   display: inline-block;
   position: relative;
-  width: 400px;
-  min-width: 400px;
-  height: 400px;
+  width: 45%;
+  height: 460px;
   border-radius: 30px;
   overflow:hidden;
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
-  margin: 30px;
+  margin: 2.5%;
 }
 
 .hero-profile-img {
@@ -206,25 +205,35 @@
 
 .hero-description-bk {
   background-image: linear-gradient(0deg , #626868, #191919);
-  border-radius: 0px;
-  position: absolute;
-  top: 55%;
-  left: 0px;
-  height: 65%;
-  width: 108%;
+    border-radius: 0px;
+    position: sticky;
+    top: 10%;
+    left: 0px;
+    height: 80%;
+    width: 108%;
+}
+	
+.top-section {
+   position: inherit;
+    /* width: 80%; */
+    max-width: 1000px;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 78%;
+    border-radius: 10px;
 }
 
-
 .hero-logo {
-  height: 40px;
-  width: 40px;
-  border-radius: 10px;
-  background-color: #fff;
-  position: absolute;
-  bottom: 25%;
-  left: 30px;
-  overflow:hidden;
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.7);
+    height: 40px;
+    width: 40px;
+    border-radius: 10px;
+    background-color: #fff;
+    position: absolute;
+    bottom: 75%;
+    left: 30px;
+    overflow: hidden;
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.7);
 }
 
 .hero-logo img {
@@ -240,16 +249,16 @@
   color: #fff;
   font-weight: bold;
   left: 100px;
-  bottom: 32%;
+  bottom: 70%;
 }
 
 
 .hero-description-2 {
   position: absolute;
-  color: #fff;
-  font-weight: 10;
-  left: 100px;
-  bottom: 26%;
+    color: #fff;
+    font-weight: 10;
+    left: 100px;
+    bottom: 48%;
 }
 
 .hero-description-3 {
@@ -262,23 +271,23 @@
 
 .hero-btn-1 {
   position: absolute;
-  background-color:#080520;
-  color: #fff;
-  left: 30px;
-  bottom: 5%;
-  padding: 10px 20px;
-  border: 1px solid #fff;
-  border-radius: 10px;
+    background-color: #080520;
+    color: #fff;
+    left: 8%;
+    bottom: 10%;
+    padding: 1% 2%;
+    border: 1px solid #fff;
+    border-radius: 10px;
 }
 
 .hero-btn {
   position: absolute;
-  color: #fff;
-  right: 30px;
-  bottom: 5%;
-  padding: 10px 20px;
-  border: 1px solid #fff;
-  border-radius: 10px;
+    color: #fff;
+    right: 8%;
+    bottom: 10%;
+    padding: 1% 2%;
+    border: 1px solid #fff;
+    border-radius: 10px;
 }
 
 .hero-btn a {
