--- a/planetsdashboard.html
+++ b/planetsdashboard.html
@@ -258,8 +258,15 @@
     color: #fff;
     font-weight: 10;
     left: 100px;
-    bottom: 48%;
+    bottom: 46%;
+    text-align: left;
 }
+
+.hero-description-2 p {
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+}
+	
 
 .hero-description-3 {
   position: absolute;
@@ -313,6 +320,75 @@
   color: #fff;
   left: 30px;
   bottom: 10%;
+}
+	
+@media (max-width: 641px) {
+	
+.nonhero{
+height: 350px;
+}
+.hero-logo {
+    height: 40px;
+    width: 40px;
+    border-radius: 10px;
+    background-color: #fff;
+    position: absolute;
+    bottom: 75%;
+    left: 5%;
+    overflow: hidden;
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.7);
+}
+.hero-description-1 {
+    position: absolute;
+    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
+    left: 35%;
+    bottom: 68%;
+}
+.hero-description-2 {
+    position: absolute;
+    color: #fff;
+    font-weight: 4px;
+    font-size: 12px;
+    left: 5%;
+    bottom: 40%;
+    text-align: left;
+}
+.hero-btn-1 {
+    position: absolute;
+    background-color: #080520;
+    color: #fff;
+    left: 4%;
+    bottom: 10%;
+    padding: 1% 2%;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    font-size: 13px;
+}
+.top-section {
+    position: inherit;
+    /* width: 80%; */
+    max-width: 1000px;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 78%;
+    border-radius: 10px;
+}	
+}
+	
+@media (max-width: 500px) and (min-width: 420px){
+	
+.nonhero{
+height: 310px;
+}
+}
+@media (max-width: 420px){
+	
+.nonhero{
+height: 290px;
+}
 }
 /* END CARD DESIGN */
 
