--- a/planetsdashboard.html
+++ b/planetsdashboard.html
@@ -366,6 +366,17 @@ height: 350px;
     border-radius: 10px;
     font-size: 13px;
 }
+.hero-btn {
+    position: absolute;
+    background-color: #080520;
+    color: #fff;
+    right: 4%;
+    bottom: 10%;
+    padding: 1% 2%;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    font-size: 13px;
+}
 .top-section {
     position: inherit;
     /* width: 80%; */
