--- a/planetsdashboard.html
+++ b/planetsdashboard.html
@@ -231,7 +231,7 @@
     background-color: #fff;
     position: absolute;
     bottom: 75%;
-    left: 30px;
+    left: 8%;
     overflow: hidden;
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.7);
 }
@@ -249,7 +249,7 @@
   color: #fff;
   font-weight: bold;
   left: 100px;
-  bottom: 70%;
+  bottom: 66%;
 }
 
 
@@ -257,8 +257,8 @@
   position: absolute;
     color: #fff;
     font-weight: 10;
-    left: 100px;
-    bottom: 46%;
+    left: 8%;
+    bottom: 40%;
     text-align: left;
 }
 
@@ -387,6 +387,13 @@ height: 350px;
     bottom: 78%;
     border-radius: 10px;
 }	
+}
+
+@media (max-width: 900px) and (min-width: 641px){
+	
+.nonhero{
+height: 400px;
+}
 }
 	
 @media (max-width: 500px) and (min-width: 420px){
