--- a/planetsdashboard.html
+++ b/planetsdashboard.html
@@ -368,7 +368,7 @@ height: 350px;
 }
 .hero-btn {
     position: absolute;
-    background-color: #080520;
+    background-color: #fff;
     color: #fff;
     right: 4%;
     bottom: 10%;
