--- a/fusion.html
+++ b/fusion.html
@@ -100,7 +100,7 @@
 <button id="button-fusion">Get Selection</button>
 </div>
 <div id="planet1display"></div>
-
+<div id="planet2display"></div>
 
 </div>
        </div>
@@ -555,7 +555,6 @@ body {
   display:flex;
   justify-content:center;
   align-items:center;
-  height:100%;
 }
 .dropdown {
   display:inline-block;
