--- a/fusion.html
+++ b/fusion.html
@@ -595,6 +595,7 @@ body {
   transition:all .3s ease;
   transform:scaleY(1);
   color:#333;
+  z-index: 10;
 }
 .dropdown ul {
   visibility:hidden;
