--- a/fusion.html
+++ b/fusion.html
@@ -51,7 +51,7 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h2 class="hero-title mt-0">Collection of planet</h2>
+	                        <h2 class="hero-title mt-0">Planet Fusion</h2>
 	                       
 						<div class="hero-app">
 						
@@ -560,7 +560,8 @@ body {
   display:inline-block;
   font-family:arial;
   position:relative;
-  margin:15px;
+  margin:2.5%;
+  width: 500px;
   font-size:16px;
 }
 .dropdown-button {
