--- a/details.html
+++ b/details.html
@@ -100,7 +100,8 @@ params = getParams();
 							
    
     <div class="first nonhero" id="imageToAdd">
-               <!<img class="hero-profile-img" src="https://cryptoplanet.pythonanywhere.com/planets/3/image" id="imageurl" alt="">>
+	    	<div id="imagePlanet"></div>
+               <!<img class="hero-profile-img" src="https://cryptoplanet.pythonanywhere.com/planets/3/image" alt="">>
                
                 <div class="hero-description-bk"></div>
                 <div class="top-section">
@@ -291,11 +292,9 @@ params = getParams();
 //var para1=document.getElementById('imageurl');
 //var para2=document.getElementById('element2');
 
-var img = document.createElement('img'); 
- img.src =  
-"https://cryptoplanet.pythonanywhere.com/planets/3/image"; 
- document.getElementById('imageToAdd').appendChild(img); 
-            //down.innerHTML = "Image Element Added.";  	
+//var img = document.createElement('img'); 
+ $("#imagePlanet").append(`
+	<img class="hero-profile-img" src="https://cryptoplanet.pythonanywhere.com/planets/3/image" alt="">`);
 	
 //para1.value = unescape(params["var1"]);
 //para2.value = unescape(params["var2"]);
