--- a/details.html
+++ b/details.html
@@ -275,6 +275,7 @@
 
 <script>
 
+const queryString = window.location.search;
 const urlParams = new URLSearchParams(queryString);
 const planet = urlParams.get('var1')
 console.log(planet);
