--- a/details.html
+++ b/details.html
@@ -277,7 +277,7 @@
 
 const queryString = window.location.search;
 const urlParams = new URLSearchParams(queryString);
-const planet = urlParams.get('var1')
+const planet = urlParams.get('planet')
 console.log(planet);
 // shirt
 
